--- a/data/httroot/err404.html
+++ b/data/httroot/err404.html
@@ -1,5 +1,18 @@
-<html>
-	<body>
-		<h1>404!!!!</h1>
-	</body>
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>ESP32 Watter Metter</title>
+	<link href="/styles/main.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+	<h1>404</h1>
+</body>
+
 </html>
