--- a/data/httroot/index.html
+++ b/data/httroot/index.html
@@ -1,5 +1,56 @@
-<html>
-	<body>
-		<h1>YEEEEEY!!!!</h1>
-	</body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>ESP32 Water Metter</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet" />
+	<script src="scripts/axios.min.js"></script>
+	<script src="scripts/vue.js"></script>
+</head>
+<body>
+	<div id="app">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="#">
+				<img src="images/icon.svg" width="30" height="30" class="d-inline-block align-top"
+					alt="">
+				ESP32 Water Metter 
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Мониторинг</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Настройки</a>
+					</li>
+				</ul>
+			</nav>
+		</nav>
+
+		<main class="container py-5">
+
+			<div class="row justify-content-md-center">
+				<div class="col-sm-6">
+					<h3 class="mb-4">Настройки</h3>
+
+					<h4 class="mb-3">WIFI</h4>
+					<div class="list-group">
+						<a href="#" class="list-group-item list-group-item-action" v-for="wifi in wifis">{{wifi.ssid}}<span v-if="wifi.open" class="tex-muted">(open)</span></a>
+					</div>
+			
+				</div>
+			</div>
+
+		</main>
+	</div>
+	<script src="scripts/app.js"></script>
+</body>
+
 </html>
