Values save api

--- a/data/httroot/index.html
+++ b/data/httroot/index.html
@@ -39,38 +39,59 @@
 			<div class="row justify-content-md-center">
 				<div class="col-sm-6">
 					<h3 class="mb-4">Настройки</h3>
-
-					<h4 class="mb-3">WIFI</h4>
-					<h5>Текущая сеть</h5>
-					<div class="list-group mb-3">
-						<a
-							href="#"
-							class="list-group-item list-group-item-action"
-							v-if="current"
-						>
-							<img src="images/wifi-1.svg" height="16px" v-if="current.rssi &lt; -80">
-							<img src="images/wifi-2.svg" height="16px" v-if="current.rssi &gt;= -80 && current.rssi &lt; -70">
-							<img src="images/wifi-3.svg" height="16px" v-if="current.rssi &gt;= -70 && current.rssi &lt; -67">
-							<img src="images/wifi-4.svg" height="16px" v-if="current.rssi &gt;= -67">
-							<b>{{current.ssid}}</b>
-							<span v-if="current.open" class="tex-muted">(open)</span>
-						</a>
+					<ul class="nav nav-tabs mb-3">
+						<li class="nav-item">
+							<a class="nav-link" :class="{active: settings.activeTab == 0}" @click.prevent="selectSettinsTab(0)" href="#">WIFI</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" :class="{active: settings.activeTab == 1}" @click.prevent="selectSettinsTab(1)" href="#">Счетчики</a>
+						</li>
+					</ul>
+					<div v-if="settings.activeTab == 0">
+						<h5>Текущая сеть</h5>
+						<div class="list-group mb-3">
+							<a
+								href="#"
+								class="list-group-item list-group-item-action"
+								v-if="settings.current"
+							>
+								<img src="images/wifi-1.svg" height="16px" v-if="settings.current.rssi &lt; -90">
+								<img src="images/wifi-2.svg" height="16px" v-if="settings.current.rssi &gt;= -90 && settings.current.rssi &lt; -75">
+								<img src="images/wifi-3.svg" height="16px" v-if="settings.current.rssi &gt;= -75 && settings.current.rssi &lt; -67">
+								<img src="images/wifi-4.svg" height="16px" v-if="settings.current.rssi &gt;= -67">
+								<b>{{current.ssid}}</b>
+								<span v-if="settings.current.open" class="tex-muted">(open)</span>
+							</a>
+						</div>
+						<h5>Доступные сети</h5>
+						<div class="list-group">
+							<a
+								href="#"
+								class="list-group-item list-group-item-action"
+								v-for="wifi in settings.wifis"
+								@click.stop="openPasskeyForm(wifi)"
+							>
+								<img src="images/wifi-1.svg" height="16px" v-if="wifi.rssi &lt; -80">
+								<img src="images/wifi-2.svg" height="16px" v-if="wifi.rssi &gt;= -80 && wifi.rssi &lt; -70">
+								<img src="images/wifi-3.svg" height="16px" v-if="wifi.rssi &gt;= -70 && wifi.rssi &lt; -67">
+								<img src="images/wifi-4.svg" height="16px" v-if="wifi.rssi &gt;= -67">
+								{{wifi.ssid}}
+								<span v-if="wifi.open" class="tex-muted">(open)</span>
+							</a>
+						</div>
 					</div>
-					<h5>Доступные сети</h5>
-					<div class="list-group">
-						<a
-							href="#"
-							class="list-group-item list-group-item-action"
-							v-for="wifi in wifis"
-							@click.stop="openPasskeyForm(wifi)"
-						>
-							<img src="images/wifi-1.svg" height="16px" v-if="wifi.rssi &lt; -80">
-							<img src="images/wifi-2.svg" height="16px" v-if="wifi.rssi &gt;= -80 && wifi.rssi &lt; -70">
-							<img src="images/wifi-3.svg" height="16px" v-if="wifi.rssi &gt;= -70 && wifi.rssi &lt; -67">
-							<img src="images/wifi-4.svg" height="16px" v-if="wifi.rssi &gt;= -67">
-							{{wifi.ssid}}
-							<span v-if="wifi.open" class="tex-muted">(open)</span>
-						</a>
+
+					<div v-if="settings.activeTab == 1">
+						<h5>Текущие значения</h5>
+						<div class="form-group">
+							<label for="exampleInputPassword1">Горячая вода</label>
+							<input type="text" v-model="settings.value1" class="form-control">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputPassword1">Холодная вода</label>
+							<input type="text" v-model="settings.value2" class="form-control">
+						</div>
+						<button type="button" class="btn btn-primary" @click="saveValues()">Сохранить</button>
 					</div>
 			
 				</div>
@@ -78,7 +99,7 @@
 
 		</main>
 
-		<div class="modal show d-block" v-if="enterPasswordOpen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal show d-block" v-if="settings.enterPasswordOpen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -90,17 +111,17 @@
 					<div class="modal-body">
 						<div class="form-group">
 							<label for="exampleInputPassword1">Пароль</label>
-							<input type="text" v-model="password" class="form-control">
+							<input type="text" v-model="settings.password" class="form-control">
 						</div>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal" @click="closePasskeyForm()">Отмена</button>
-						<button type="button" class="btn btn-primary" @click="connect()" :disabled="!password">Подключиться</button>
+						<button type="button" class="btn btn-primary" @click="connect()" :disabled="!settings.password">Подключиться</button>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="modal-backdrop fade show d-block" v-if="enterPasswordOpen"></div>
+		<div class="modal-backdrop fade show d-block" v-if="settings.enterPasswordOpen"></div>
 	</div>
 	<script src="scripts/app.js"></script>
 </body>
