--- a/data/httroot/index.html
+++ b/data/httroot/index.html
@@ -128,6 +128,21 @@
 			<button type="button" class="btn btn-primary" @click="saveValues()">Сохранить</button>
 		</div>
 	</script>
+	<script id="counters-page-html" type="text/x-template">
+		<div>
+			<h5 class="mb-4">Текущие значения</h5>
+			<div class="row">
+				<div class="col col-12 col-md-6 text-center">
+					<h4 class="mb-3">Горячая</h4>
+					<p class="counter"><span v-for="val1_i in value1">{{val1_i}}</span>&nbsp;.&nbsp;<span class="text-danger" v-for="dec1_i in decimals1">{{dec1_i}}</span></p>
+				</div>
+				<div class="col col-12 col-md-6 text-center">
+					<h4 class="mb-3">Холодная</h4>
+					<p class="counter"><span v-for="val2_i in value2">{{val2_i}}</span>&nbsp;.&nbsp;<span class="text-danger" v-for="dec2_i in decimals2">{{dec2_i}}</span></p>
+				</div>
+			</div>
+		</div>
+	</script>
 </head>
 <body>
 	<div id="app">
@@ -162,6 +177,7 @@
 		</nav>
 
 		<main class="container py-5">
+			<counters-page v-if="page == 0"></counters-page>
 			<settings-page v-if="page == 1"></settings-page>
 		</main>
 	</div>
